[project]
name = "inventario-api"
version = "0.1.0"
description = "API de inventario con FastAPI, PostgreSQL y autenticaci칩n JWT."
authors = [
    { name = "Tu Nombre" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "psycopg2-binary",
    "passlib[bcrypt]",
    "bcrypt",
    "python-jose",
    "pydantic",
]

[tool.uv]
# uv crear치 y gestionar치 el entorno autom치ticamente
